--- a/view/AddressNavigatorWidget.ui
+++ b/view/AddressNavigatorWidget.ui
@@ -119,8 +119,156 @@
        </rect>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
+      <widget class="QWidget" name="tab_2">
+       <attribute name="title">
+        <string>Нэгж талбар</string>
+       </attribute>
+       <widget class="QPushButton" name="selected_parcel_load_button">
+        <property name="geometry">
+         <rect>
+          <x>9</x>
+          <y>50</y>
+          <width>283</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Хаягийн мэдээллийн санд оруулах</string>
+        </property>
+       </widget>
+       <widget class="QLineEdit" name="geographic_name_edit">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>290</y>
+          <width>441</width>
+          <height>20</height>
+         </rect>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>273</y>
+          <width>74</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Газар зүйн нэр</string>
+        </property>
+       </widget>
+       <widget class="QLineEdit" name="khashaa_no_edit">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>390</y>
+          <width>441</width>
+          <height>20</height>
+         </rect>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_2">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>373</y>
+          <width>85</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Хашааны дугаар</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_3">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>321</y>
+          <width>74</width>
+          <height>13</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Гудамж</string>
+        </property>
+       </widget>
+       <widget class="QComboBox" name="street_cbox">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>340</y>
+          <width>387</width>
+          <height>22</height>
+         </rect>
+        </property>
+       </widget>
+       <widget class="QSpinBox" name="spinBox">
+        <property name="geometry">
+         <rect>
+          <x>403</x>
+          <y>340</y>
+          <width>48</width>
+          <height>22</height>
+         </rect>
+        </property>
+       </widget>
+       <widget class="QComboBox" name="layer_type_cbox">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>20</y>
+          <width>281</width>
+          <height>22</height>
+         </rect>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="get_address_button">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>420</y>
+          <width>283</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Хаяг авах</string>
+        </property>
+       </widget>
+       <widget class="QTableWidget" name="address_parcel_twidget">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>80</y>
+          <width>441</width>
+          <height>141</height>
+         </rect>
+        </property>
+        <attribute name="horizontalHeaderDefaultSectionSize">
+         <number>140</number>
+        </attribute>
+        <column>
+         <property name="text">
+          <string>Нэгж талбарын дугаар</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>Давхаргын төрөл</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>Хаягийн төлөв</string>
+         </property>
+        </column>
+       </widget>
+      </widget>
       <widget class="QWidget" name="tab">
        <attribute name="title">
         <string>Гудамж</string>
@@ -206,126 +354,6 @@
           <string>Хавсралт Материал</string>
          </attribute>
         </widget>
-       </widget>
-      </widget>
-      <widget class="QWidget" name="tab_2">
-       <attribute name="title">
-        <string>Нэгж талбар</string>
-       </attribute>
-       <widget class="QPushButton" name="selected_parcel_load_button">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>50</y>
-          <width>281</width>
-          <height>23</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>Нэгж талбарын мэдээлэл харах</string>
-        </property>
-       </widget>
-       <widget class="QLineEdit" name="geographic_name_edit">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>110</y>
-          <width>441</width>
-          <height>20</height>
-         </rect>
-        </property>
-       </widget>
-       <widget class="QLabel" name="label">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>93</y>
-          <width>74</width>
-          <height>13</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>Газар зүйн нэр</string>
-        </property>
-       </widget>
-       <widget class="QLineEdit" name="khashaa_no_edit">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>210</y>
-          <width>441</width>
-          <height>20</height>
-         </rect>
-        </property>
-       </widget>
-       <widget class="QLabel" name="label_2">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>193</y>
-          <width>85</width>
-          <height>13</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>Хашааны дугаар</string>
-        </property>
-       </widget>
-       <widget class="QLabel" name="label_3">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>141</y>
-          <width>74</width>
-          <height>13</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>Гудамж</string>
-        </property>
-       </widget>
-       <widget class="QComboBox" name="street_cbox">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>160</y>
-          <width>387</width>
-          <height>22</height>
-         </rect>
-        </property>
-       </widget>
-       <widget class="QSpinBox" name="spinBox">
-        <property name="geometry">
-         <rect>
-          <x>403</x>
-          <y>160</y>
-          <width>48</width>
-          <height>22</height>
-         </rect>
-        </property>
-       </widget>
-       <widget class="QComboBox" name="layer_type_cbox">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>20</y>
-          <width>281</width>
-          <height>22</height>
-         </rect>
-        </property>
-       </widget>
-       <widget class="QPushButton" name="get_address_button">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>280</y>
-          <width>281</width>
-          <height>23</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>Хаяг авах</string>
-        </property>
        </widget>
       </widget>
      </widget>
